feat: Add AssRenderCore Class

--- a/Ruminoid.Common.Renderer.csproj
+++ b/Ruminoid.Common.Renderer.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\AssRenderCore.cs" />
     <Compile Include="LibAss\LibAssInterop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\FrameAdaptor.cs" />
